--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 .page {
   margin: 0 auto;
   padding: 0;
-  font-family: "Helvetica Neue", Arial, sans-serif;
+  font-family: 'Bruno Ace SC', cursive;
   background-color: rgb(241, 241, 232);
 }
 
@@ -25,6 +25,8 @@
     width: 200px;
     height: 50px;
     font-size: 18px;
+    
+  font-family: 'Bruno Ace SC', cursive;
   }
 
 
@@ -35,6 +37,8 @@
     height: 250px;
     resize: none;
     border: 3px solid burlywood;
+    
+  font-family: 'Bruno Ace SC', cursive;
   }
   
  
