--- a/style.css
+++ b/style.css
@@ -1,60 +1,132 @@
-.page {
-  margin: 0 auto;
+body {
+  background: #9384D1;
+  margin: 0;
   padding: 0;
-  font-family: 'Bruno Ace SC', cursive;
-  background-color: rgb(241, 241, 232);
+  box-sizing: border-box;
+}
+
+.maincontainer {
+  background-color: #ECC9EE;
+  margin: 60px;
+  height: 625px;
+  border-radius: 8px;
+  box-shadow: 7px 12px 30px black;
+
 }
 
 .heading {
   text-align: center;
+  font-size: xx-large;
+  font-family: 'Bruno Ace SC', cursive;
+  margin-top: 30px;
 }
 
-.form-wrap {
-  margin:  auto;
-  width: 850px;
+.bcontainer {
   display: flex;
+  justify-content: center;
   flex-direction: row;
-  justify-content:center;
-  gap: 15px;
-  margin-bottom: 20px;
+  gap: 25px;
+  margin-top: 30px;
+  margin-bottom: 30px;
+}
+
+button {
+  width: 80px;
+  height: 60px;
+  font-size: 15px;
+  background-color: #E3F2C1;
+}
+
+
+.container {
+  display: flex;
+  justify-content: center;
+  flex-direction: row;
+  gap: 25px;
+  margin-top: 20px;
+}
+
+
+textarea {
+  resize: none;
+  width: 200px;
+  height: 250px;
+  border-radius: 5px;
+  text-align: center;
+  color: black;
+  border: 3px solid #9384D1;
+  font-family: cursive;
+
+}
+
+.textarea:is(:focus,:valid){
+  padding-top: 40px;
+  box-sizing: border-box;
+}
+
+.textarea2:is(:focus,:valid){
+  padding-top: 60px;
+  box-sizing: border-box;
+}
+
+textarea::-webkit-scrollbar{
+  width: 0px;
+}
+
+textarea::placeholder{
+  color: black;
+}
+
+.container2 {
+  display: flex;
+  justify-content: center;
+  flex-direction: row;
+  gap: 35px;
+  margin-top: 20px;
+}
+
+.container2 textarea {
+  resize: none;
+  width: 400px;
+  height: 150px;
 }
 
 
 
-.form__button {
-    width: 200px;
-    height: 50px;
-    font-size: 18px;
-    
-  font-family: 'Bruno Ace SC', cursive;
-  }
 
+.buttonit {
+  --c: #ECC9EE;
+  width: 120px;
+  height: 60px;
+  font-size: 15px;
+  background: linear-gradient(90deg, #0000 33%, #fff5, #0000 67%) var(--_p, 100%)/300% no-repeat, #9384D1;
+  color: #0000;
+  border: none;
+  transform: perspective(500px) rotateY(calc(20deg*var(--_i, -1)));
+  text-shadow: calc(var(--_i, -1)* 0.08em) -.01em 0 var(--c),
+      calc(var(--_i, -1)*-0.08em) .01em 2px #0004;
+  outline-offset: .1em;
+  transition: 0.3s;
+}
 
-  
-  .textarea {
-    margin-bottom: 10px;
-    width: 200px;
-    height: 250px;
-    resize: none;
-    border: 3px solid burlywood;
-  font-family: 'Bruno Ace SC', cursive;
-  }
-  
- 
- .form-wrap2 {
-   margin:  auto;
-   width: 850px;
-   display: flex;
-   flex-direction: row;
-   
-   gap: 15px;
-   margin-bottom: 20px;
- }
+.buttonit:hover,
+.buttonit:focus-visible {
+  --_p: 0%;
+  --_i: 1;
+}
 
- .form__button2{
-  width: 200px;
-  height: 50px;
-  font-size: 18px;
+.buttonit:active {
+  text-shadow: none;
+  color: var(--c);
+  box-shadow: inset 0 0 9e9q #0005;
+  transition: 0s;
+}
 
- }
- 
+.buttonit {
+  font-weight: bold;
+  font-size: 2rem;
+  margin: 0;
+  cursor: pointer;
+  padding: .1em .3em;
+}
+
