--- a/landing.css
+++ b/landing.css
@@ -2,6 +2,13 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+   
+    
+}
+
+.main{
+width: 100%;
+
 }
 
 .first {
@@ -31,6 +38,7 @@
     justify-content: space-between;
     border-radius: 72px;
     /* box-shadow: -1px -1px 7px black; */
+    /* background-color: #d7c16a; */
 }
 
 /* .third{
@@ -129,6 +137,7 @@
     -ms-flex-pack: center;
     justify-content: center;
     color: #000;
+    padding: 30px;
 }
 
 .book2 {
@@ -140,6 +149,8 @@
     background: #46FCD7;
     !important
 }
+
+
 
 
 .cover {
@@ -209,9 +220,9 @@
     box-shadow:10px 10px 10px #181818;
 }
 
-.fifth a{
-    text-decoration: none;
- 
+ a{
+        text-decoration: none;
+        color: #000;
 }
 .card {
     --background: linear-gradient(to left, #f7ba2b 0%, #ea5358 100%);
