--- a/ShannonF.css
+++ b/ShannonF.css
@@ -1,13 +1,15 @@
 
 body {
-    background: #9384D1;
+    /* background: #9384D1; */
+    background: linear-gradient(90deg, #FC466B 0%, #3F5EFB 100%);
     margin: 0;
     padding: 0;
     box-sizing: border-box;
 }
 
 .maincontainer {
-    background-color: #ECC9EE;
+    /* background-color: #ECC9EE; */
+    background-color: azure;
     margin: 60px;
     height: 625px;
     border-radius: 8px;
@@ -17,9 +19,10 @@ body {
 
 .heading {
     text-align: center;
-    font-size: xx-large;
+    font-size: 40px;
     font-family: 'Bruno Ace SC', cursive;
     margin-top: 30px;
+    padding-top: 20px;
 }
 
 .bcontainer {
@@ -56,7 +59,10 @@ textarea {
     text-align: center;
     color: black;
     border: 3px solid #9384D1;
-    font-family: cursive;
+    /* font-family: cursive; */
+    font-family: 'Roboto Condensed', sans-serif;
+    font-weight: bolder;
+    box-shadow: 5px 9px 20px black;
 
 }
 
@@ -96,11 +102,12 @@ textarea::placeholder{
 
 
 .buttonit {
-    --c: #ECC9EE;
+    --c: #FFFF;
+    /* background: #FC466B; */
     width: 120px;
     height: 60px;
     font-size: 15px;
-    background: linear-gradient(90deg, #0000 33%, #fff5, #0000 67%) var(--_p, 100%)/300% no-repeat, #9384D1;
+    background: linear-gradient(90deg, #0000 33%, #fff5, #0000 67%) var(--_p, 100%)/300% no-repeat, #3F5EFB;
     color: #0000;
     border: none;
     transform: perspective(500px) rotateY(calc(20deg*var(--_i, -1)));
@@ -108,6 +115,7 @@ textarea::placeholder{
         calc(var(--_i, -1)*-0.08em) .01em 2px #0004;
     outline-offset: .1em;
     transition: 0.3s;
+    color: #FC466B;
 }
 
 .buttonit:hover,
