--- a/landing.css
+++ b/landing.css
@@ -2,12 +2,15 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    /*  */
    
     
 }
 
 .main{
 width: 100%;
+background-color: antiquewhite;
+padding-bottom: 40px;
 
 }
 
@@ -41,6 +44,7 @@ width: 100%;
     /* background-color: #d7c16a; */
     /* margin-left: 100px; */
     /* gap: 100px; */
+    background-color: #ffff;
 }
 
 .third{
@@ -297,7 +301,8 @@ width: 100%;
     padding:30px 0px;
     font-family: 'Play', sans-serif;
     text-align:center;
-    font-size: 25px;
+    font-size: 28px;
+    font-weight: BOLD;
     }
     
     .footer .row{
